# profile-optimizer

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: pyproject.toml  test_db.py
backend/app/: main.py  models.py
backend/app/agents/: interactive.py  profile_evaluation.py  url_processing.py
backend/app/api/: endpoints.py
backend/app/core/: config.py  database.py  security.py
docs/: implementation_plan.md  task.md  tech_stack_recommendation.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: Home.tsx
user-stories/icebox/: content-choice.md
